quiz vocab albanizmi

--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -57,6 +57,30 @@
         &nbsp; &nbsp; &nbsp; Страни лингвисти најчешће користе термин <em>торлачки</em> када говоре о 
         овим говорима. 
     </p>
+
+    <h2 class="display-8 fw-bold">Више о појму Торлак</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Вук С. Караџић у свом Српском рјечнику истумаченим њемачкијем и латинскијем ријечима пише 
+        да је <em>Торлак - човјек који нити говори чисто Српски ни Бугарски</em>. Често се погрешно порекло овог појма 
+        изводи из словенске речи тор и турског суфикса, међутим онда би ова реч у срспком гласила торлук, а у ПТДГ говорима 
+        би гласила торлък, са значењем места на којем има торова. Али, у ПТДГ говорима реч је посведочена искључиво у облику 
+        торлак или турлак (услед преласка неакцентованог о -> у). <br/>
+        &nbsp; &nbsp; &nbsp; У турском етимолошком речнику (Nişanyan Sözlük - Türkçe Etimolojik Sözlük) под уносом torlak 
+        стоји следеће: "Реч торлак средњег турског језика се развила из <em>безбрада младеж, младић без браде, почетник, новајлија</em>. 
+        Реч води порекло из средњег туркског <em>тор</em> са значењем <em>младеж, младић, штенац</em> уз турски суфикс -лак. 
+        То је име које је давано новопеченим дервишима у Бекташи редовима. Етноним Торлак који је дат планинском народу 
+        југоисточне Србије и западне Бугарске мора потицати из ове употребе термина." <br/>
+        &nbsp; &nbsp; &nbsp; Бекташи Муслимани су у турско време представљали најпопуларнију секту Ислама на балканском полуострву. 
+        И дан данас петина свих Муслимана у Албанији припада овој секти. Представљају мистични ред Ислама и дозвољавају конзумирање 
+        алкохола и свињског меса, боравак мушкараца и жена који нису у сродству у истој просторији (тзв. слободно мешање), као и бријање 
+        (до тренутка када члан реда не добије звање дервиша, тада би му се наредило да пусти браду). <br/>
+        &nbsp; &nbsp; &nbsp; Због поменутих либералнијих схватања Ислама често су били прогањани од стране других Муслимана, а због 
+        конзумације алкохола и сличног под појмом торлак у бугарским речницима наилазимо и на значења <em>пијаница, пропалица</em>.
+        <br/>
+        &nbsp; &nbsp; &nbsp; Термин је код ПТДГ говорника данас прихваћен као регионални назив на уском географском подручју 
+        пограничних предела Србије и Бугарске, у неким крајевима га доживљавају као увреду, а становницима дужином Јужне Мораве 
+        није јасно зашто их странци називају тако. 
+    </p>
     <hr>
     
     <h1 class="display-6 fw-bold" id="istorija_i_razvoj">Историја и развој</h1>
