--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -80,10 +80,11 @@
                     routerLink="/quiz/vocabulary/sinonimi_turcizmi">6</button>
                 <span> - синоними - турцизми</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
-            <!--<div class="col-md-2 column">
-                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg">7</button>
-                <span> - (ТОДО)</span>&nbsp;&nbsp;&nbsp;&nbsp;
-            </div>-->
+            <div class="col-md-2 column">
+                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg"
+                    routerLink="/quiz/vocabulary/albanizmi">7</button>
+                <span> - албанизми</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
         </div>
         <br /><br />
         <div class="row">
