quiz vocab days of the week and language page

--- a/src/app/info-page/info-page.component.html
+++ b/src/app/info-page/info-page.component.html
@@ -205,7 +205,7 @@
     
     <h1 class="display-6 fw-bold" id="vise_o_jeziku">Више о језику</h1>
     <p class="col-md-11 fs-5">
-        &nbsp; &nbsp; &nbsp; Више о особинама ових говора видите <em><a href="#">овде</a></em>.
+        &nbsp; &nbsp; &nbsp; Више о особинама ових говора видите <em><a routerLink="/mind-your-language">овде</a></em>.
     </p>
     <hr>
 </div>
