language page fonetics

--- a/src/app/mind-your-language/mind-your-language.component.html
+++ b/src/app/mind-your-language/mind-your-language.component.html
@@ -1,1 +1,192 @@
-<p>mind-your-language works!</p>
+<div class="container bg-light py-5">
+    
+    <p class="col-md-8 fs-4">Садржај:</p>
+    <ul>
+        <li><a href="/mind-your-language/#predgovor">Предговор</a></li>
+        <li><a href="/mind-your-language/#fonetika">Фонетика</a>
+            <ul>
+                <li><a href="/mind-your-language/#fonetika-vokali">Вокали</a></li>
+                <li><a href="/mind-your-language/#fonetika-akcenat">Акценат</a></li>
+                <li><a href="/mind-your-language/#fonetika-konsonanti">Консонанти</a></li>
+                <li><a href="/mind-your-language/#fonetika-jotovanje">Јотовање</a></li>
+                <li><a href="/mind-your-language/#fonetika-suglasnicke-grupe">Сугласничке групе</a></li>
+            </ul>
+        </li>
+        <li><a href="/mind-your-language/#morfologija">Морфологија</a>
+    </ul>
+    <hr>
+    
+    <h1 class="display-6 fw-bold" id="predgovor">Предговор</h1>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; ПТДГ говори се оштро издвајају од штокавских говора по двема 
+        групама особина: извесним бројем архаизама и низом иновација. У архаизме спадају: 
+        чување посебне фонеме за полугласник, неизмењено -л, -л- и слоготворно л и њихове 
+        замене које се делимично или потпуно разликују од онога што је нормално за штокавске 
+        говоре, и друго. Најкарактеристичније иновације су: губитак квантитативних разлика 
+        (нестанак опозиције дугих према кратким слоговима), аналитичка деклинација придева 
+        (и именица), губитак инфинитива, употреба удвојених облика личних заменица и друго.<br/>
+        &nbsp; &nbsp; &nbsp; Ови говори воде порекло из некадашње најисточније групе 
+        штокавских говора и по правилу су штокавске иновације најраније фазе (до око 12. века, односно 
+        период појаве првих писаних споменика на народном језику) потпуно или делимично 
+        заступљене у њима. Новији развој штокавских говора (од 12. века надаље) ове говоре најчешће 
+        није дотицао, или их је захватао само делимично. Тако су у тимочко-лужничком дијалекту 
+        изостали изостали замена полугласника, стапање -јд- у -ђ-, претварање -л у -о, а углавном 
+        и промена слоготворног л у -у-. У призренско-јужноморавском, међутим, проналазимо промену 
+        -јд- у -ђ- (-ѓ-), а и слоготворно л и -л трпе одређене промене, с тим што се оне не 
+        поклапају у потпуности са онима у штокавским говорима.<br/>
+        &nbsp; &nbsp; &nbsp; Претпоставља се да су ПТДГ говори изашли из штокавске развојне заједнице у 
+        12. и 13. веку (тимочко-лужнички) и у 14. веку (призренско-јужноморавски). Има доста разлога 
+        за претпоставку да се то догодило са територијалним ширењем ПТДГ говора ка истоку и југоистоку. 
+        Ове миграције би углавном спроводило пастирско живље у потрази за новим испашама. Карактеристично 
+        је да су високи планински венци дуж граница данашње Србије према Бугарској, односно С. Македонији 
+        сви у потпуности заузети овим говорима, чији су се представници затим спуштали и у околне долине, 
+        даље ка истоку и југу. <br/>
+        &nbsp; &nbsp; &nbsp; Централни догађај у доцнијем развоју ПТДГ говора је појава тзв. балканизама. 
+        Без балканизама, архаизми ових говора не би правили велику разлику у односу на друге штокавске 
+        говоре, међутим, са штокавске тачке гледишта ови говори су "балканизовани до непрепознатљивости". 
+        Односно, оно што одваја ову групу говора од штокавских говора, а спаја са бугарским, македонским, 
+        румунским, аромунским, новогрчким и албанским језиком јесу управо балканизми. Првобитна порекла 
+        језичким особинама које називамо балканизмима нису увек најјаснија, али је извесно да су се оне 
+        у већини случајева преносиле из једног балканског језика у други. Јасно је да се ни одређене црте 
+        ПТДГ говора нису спонтано развиле већ да су унесене са стране. Оправдана је претпоставка да је 
+        велику улогу морала играти асимилација романског елемента на овом терену, али не треба 
+        потцењивати ни утицај суседних словенских језика. Географски разлози упућују на то да су на 
+        призренско-јужноморавски дијалекат доста утицали македонски говори, а на тимочко-лужнички дијалекат 
+        бугарски. Углавном, изласком из штокавске развојне сфере, ПТДГ говори су не раније од 15. века ушли 
+        у балканску развојну сферу. Значајно је напоменути тзв. призренски говорни тип који је мигрирао ка 
+        североистоку потискујући некадашњи говор јужноморавске долине у брда и планине источно од Јужне Мораве 
+        где се очувао као сврљишко-заплањски дијалекат. <br/>
+        &nbsp; &nbsp; &nbsp; Кад се све сабере и одузме призренско-јужноморавски дијалекат је од свих ПТДГ 
+        говора најсличнији просечном штокавском говору због одређених иновација новоштокавског духа и мањем 
+        броју балканизама у односу на друге ПТДГ говоре. <br/>
+        &nbsp; &nbsp; &nbsp; Азбука која се користи кроз цео пројекат за запис се састоји од 31 слова и 
+        изгледа овако:<br/> А а Б б В в Г г Ѓ ѓ Д д Е е Ж ж Ѕ ѕ З з И и Ј ј К к Ќ ќ Л л Љ љ М м Н н Њ њ О о 
+        П п Р р С с Т т У у Ф ф Ц ц Ч ч Џ џ Ш ш Ъ ъ
+    </p>
+    <hr>
+
+    <h1 class="display-6 fw-bold" id="fonetika">Фонетика</h1>
+    <h2 class="display-8 fw-bold" id="fonetika-vokali">Вокали</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Вокални систем се састоји од фонема <em>а, е, и, о, у, ъ,</em> слготворног р 
+        (у запису <em>ръ</em>) и слоготворног л (у запису <em>лъ</em>) и његових рефлекса.
+        <br/> &nbsp; &nbsp; &nbsp; Фонема <em>ъ</em> 
+        по правилу има гласовну вредност нелабијализованог вокала, најчешће средње висине, средњег или задњег реда. 
+        По пореклу разликујемо: 1) полугласник настао из старословенских гласова, танког и дебелог јер, 2) 
+        полугласник настао новијим развојем говора, 3) полугласник настао редуковањем неког од вокала
+        <em>а, е, и, о, у,</em> у изговору, 4) и полугласник настао адаптацијом у турцизмима.
+        <br/> &nbsp; &nbsp; &nbsp; Полугласник је најстабилнији када је под акцентом, иначе често има 
+        призвук неког од других вокала, најчешће вокала <em>а</em>, што се у лингвистици записује као 
+        <em>ъ<sup>a</sup></em>. Често се вокал <em>а</em> у изговору изједначава са <em>ъ</em> што се кроз 
+        пројекат означава са <em>ă</em>, слично за остале вокале.
+        <br/> &nbsp; &nbsp; &nbsp; Примери: <em>съг, дънъ̀с, пъс, къд, комшилъ̀к, пашалъ̀к, зъ̀лва, шиќѐрък, малѐцък, съм, чъс, чăс, бăш, калабăлъ̀к, 
+            једъ̀н, о̀съм, дъж, о̀гъњ, вѐтър, мръ̀тъв, усъ̀не, одъ̀тле, тъмнѝна, котъ̀л, петъ̀к.</em>
+        <br/> &nbsp; &nbsp; &nbsp; Изворно слоготворно л се чува само на крајњем североистоку у тимочком поддијалекту. Другим речима, ъ у лъ је 
+        изразито благог скоро неосетног изговора, док је јужније ъ израженије: влък, слъ̀нце, ја̀блъка, слъза̀, плън. У лужничком 
+        поддијалекту тимочко-лужничкога, као и у сврљишко-заплањском дијалекту, слоготворно л даје баш лъ, с тим што у 
+        суседству лабијалних сугласника ипак даје -у-: вук, буа̀, музѐм, пỳним. У призренско-јужноморавскоме основни рефлекс 
+        је -у-, али се у суседству дентала јавља рефлекс -лу-: слỳнце, слỳза, длуг. У призренско-јужноморавском дијалекту се 
+        јављају и облици са -ли- (настали од старих лъ и ль): глиќ, глиќам; као и облик -љу-: жључ, прежљỳчим се, настали 
+        једначењем сугласника по месту и начину артикулације. 
+        <br/> &nbsp; &nbsp; &nbsp; Слоготворно р је заступљено у свим ПТДГ говорима, може се наћи на почетку, у средини или на крају речи: <em>
+            цръв, цвръс, ръ̀њка, връ, кръв, връ̀ќам.
+        </em>
+        <br/>
+        &nbsp; &nbsp; &nbsp; На оном делу призренско-јужноморавског дијалекта који је на Косову се јавља још један вокал поред наведених, 
+        то је вокал <em>ü</em> који се развио под утицајем албанског и турског језика, чува се у турцизмима који поседују овај вокал, као 
+        на пример <em>тüтüнџѝја</em> (други ПТДГ говори имају: тутунџѝја).<br/>
+        &nbsp; &nbsp; &nbsp; ПТДГ говори су доследно екавски, то јест, рефлекс старословенског јата је увек <em>е</em>, чак и у 
+        оним позицијама на којима је у екавским штокавским говорима рефлекс <em>и</em>, као што је код негације глагола јесам 
+        (не съм - нисам), императивног начина (узнѐте - узмите), датива личних заменица (мѐне - мени), прилога за време 
+        (лѐте - лети, зѝме - зими).<br/>
+        &nbsp; &nbsp; &nbsp; Редукција вокала и супституција вокала су две појаве које су честе у ПТДГ говорима. Супституција 
+        вокала може бити објашњења фоентски или морфолошки, а понекад се супституција врши по аналогији.
+    </p>
+
+    <h2 class="display-8 fw-bold" id="fonetika-akcenat">Акценат</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Акценатски систем ПТДГ говора је доста простији у односу на стање у новоштокавским говорима. 
+        Акценат је само један, по карактеру експираторичан, без квантитативних или тонских обележја, чији изговор може 
+        варирати трајањем и тоном само у зависности од реченичке интонације. С тим у виду, вокал <em>а</em>, на пример, у 
+        ПТДГ говорима заправо мења четири вокала у књижевном српском језику: <em>ȁ, à, ȃ, á</em>. Место акцента је слободно.<br/>
+        &nbsp; &nbsp; &nbsp; Природа експираторног акцента доприноси задржавању напрегнуте артикулације вокала у акцентованом слогу и отварању 
+        артикулације у неакцентованом слогу, што обезбеђује фонетске узроке за тзв. "мућење вокала", односно за њихову 
+        супституцију другим вокалима. 
+    </p>
+
+    <h2 class="display-8 fw-bold" id="fonetika-konsonanti">Консонанти</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Консонантски систем ПТДГ говора се од стања у савременом српском језику разликује по непостојању 
+        гласа <em>х</em> (скоро исту судбину дели и <em>ф</em>), ослабљеној артикулацији гласова <em>ј</em> и <em>в</em> и 
+        очувању звучног <em>ѕ</em> безвучнога <em>ц</em>.<br/>
+        &nbsp; &nbsp; &nbsp; Глас <em>х</em> има две судбине у ПТДГ говорима: или се супституише са <em>к</em> 
+        (<em>ко̀дник, ба̀кча, Кра̀не [надимак имену Хранислав], крас, тѐпик, па̀зука, прѝкод, плек</em>), 
+        или испада из изговора, а тамо где испада из изговора на његовом месту се могу појавити <em>ј</em> или 
+        <em>в</em> (<em>меја̀на, ора̀, леб, ѝтно, връ, мỳва, ỳво, мејỳр, ба̀ча, сув, ка̀ва</em>).<br/>
+        &nbsp; &nbsp; &nbsp; Консонант <em>ф</em> углавном бива замењен консонантом <em>в</em>, али у косовским ПТДГ 
+        говорима је <em>ф</em> добро сачувано под утицајем албанског и турског језика. Чак у тој мери је тај глас тамо 
+        добро сачуван да у неким случајевима мења <em>в</em> са <em>ф</em>. Из тог разлога, као и за неке речи страног 
+        порекла је консонант <em>ф</em> остављен као део азбуке. Сви остали ПТДГ говори теже замени <em>ф</em> у <em>в</em>: 
+        <em>вабрѝка, вакултѐт, Вѝлип, вилџа̀н, вурỳна</em>. Примери замене <em>в</em> у <em>ф</em> 
+        (најприсутнија је тамо где је постојала сугласничка група <em>хв</em>): <em>ка̀фа, фръ̀љам, фа̀тим, фа̀ла</em>.
+        <br/>
+        &nbsp; &nbsp; &nbsp; Сугласник <em>в</em> је доста слабе артикулације те у неким ПТДГ говорима долази до 
+        његовог потпуног испадања из изговора у неким речима: <em>пра̀им, забра̀љам, дрỳсто, бỳка</em>. Секундарно 
+        <em>в</em> се може јавити на месту где је некад било <em>х</em> (<em>глỳвча, дува̀н</em>), као и између два 
+        суседна самогласника ради разбијања вокалских група (<em>ја̀нувар, кара̀вула</em>).<br/>
+        &nbsp; &nbsp; &nbsp; Консонант <em>ј</em> се у вокалским групама у којима други вокал није <em>е</em> или 
+        <em>и</em> углавном добро чује, међутим у вокалским групама где је други вокал <em>е</em> или <em>и</em> 
+        консонант <em>ј</em> има висок степен редукције који се може изједначити и са елиминисањем.<br/>
+        &nbsp; &nbsp; &nbsp; Африката <em>ѕ</em> се добро очувала: <em>ѕвер, ѕвѐзда, ѕйд, ѕръѕо̀љ, ѕунѕа̀р, ѕаѕѝки сала̀та, ѕѝва</em>.
+        <br/>
+        &nbsp; &nbsp; &nbsp; Сугласник <em>л</em> на крају речи или слога је очуван у потпуности у тимочко-лужничком и 
+        сврљишко-заплањском дијалекту (<em>узѐл, писа̀л, видѐл, бел, цел, пѐпел, светѝлник</em>). У призренско-јужноморавскоме 
+        је такође тавко <em>л</em> сачувано у именицама, придевима и прилозима, али у радном глаголском придеву мушког рода једнине 
+        прелази у <em>-а</em> (<em>писа̀ја, узѐја, видѐја, уватѝја</em>). У неким косовским ПТДГ говорима прелазак <em>л</em> у 
+        <em>а</em> је отишао корак даље па тамо тако имамо <em>бѐја</em> уместо <em>бел</em>.<br/>
+        &nbsp; &nbsp; &nbsp; Сугласник <em>ќ</em> у изговору варира од македонског ќ, преко палатала средњег реда ќ<sup>к</sup>, 
+        преко палатала предњег реда ќ<sup>т</sup>, па до класично српског ћ. Аналогно за <em>ѓ</em>. По постанку, ќ и ѓ су у 
+        тимочко-лужничком искључиво од јотованих к и г (<em>ма̀јќа, раќѝја, но̀ѓе, рỳќе</em>), а у призренско-јужноморавскоме 
+        су и од прасловенских *tj и *dj (<em>ноќ, свѐќа, мѐѓа</em>), док су у тимочко-лужничком рефлекси ових прасловенских 
+        гласова <em>ч</em> и <em>џ</em> (<em>ноч, свеча̀, меџа̀</em>).
+    </p>
+
+    <h2 class="display-8 fw-bold" id="fonetika-jotovanje">Јотовање</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; У ПТДГ говорима изостају резултати старог јотовања. Ова појава захвата нејотоване облике трпног 
+        придева (<em>заро̀бен, огра̀ден, испра̀тен, принѐсен, зга̀зен, одѐлен, кỳпен, изма̀мен, напра̀вен</em>) и глаголске именице 
+        (<em>грабѐње, косѐње, вадѐње, галѐње, везѐње, лупѐње</em>). Јотовани и аналошки облици су ретки. <br/>
+        &nbsp; &nbsp; &nbsp; Група <em>ст</em> углавном остаје нејотована: <em>ожало̀стен, некръ̀стен, очѝстен, намѐстен</em>.<br/>
+        &nbsp; &nbsp; &nbsp; Ново јотовање није извршено код лабијала: <em>гро̀бје, здра̀вје, сно̀пја, дръ̀вја</em>. У 
+        призренско-јужноморавскоме група <em>јд</em> је јотована у глаголима: до̀ѓем, по̀ѓем, на̀ѓем и сл., док је у другим 
+        дијалектима група нетакнута: до̀јдем, по̀јдем, на̀јдем и сл. <br/>
+    </p>
+
+    <h2 class="display-8 fw-bold" id="fonetika-suglasnicke-grupe">Сугласничке групе</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Чува се сугласничка група <em>сл</em>: <em>слѝва, слѝвче, слѝвовица, слива̀р, слива̀рник</em>.<br/>
+        &nbsp; &nbsp; &nbsp; Групе <em>цр</em> (<em>црѐшња, црешњова̀ча, црѐшњиче</em>) и <em>цвр</em> (<em>цвръс, цвръ̀сто, оцвръ̀снем</em>).<br/>
+        &nbsp; &nbsp; &nbsp; Група <em>кќ > ќ</em> је упрошћена: <em>ќѐрка, ќѐра, ќеркосува̀ње</em>. Финалне групе 
+        <em>ст, зд, шт, жд</em> су упрошћене у <em>с, з, ш, ж</em>: <em>мос, пос, гроз, веш, дъж</em>. Група <em>сц > ц</em> је 
+        упрошћена дисимилацијом: <em>ицѐпим, ицѐрим се</em>.<br/>
+        &nbsp; &nbsp; &nbsp; Групе <em>гн > гњ</em> (<em>гњѐздо, угњѐздим се</em>), <em>жл > жљ</em> (<em>жљѐзда, жљеб</em>) и 
+        <em>кл > кљ</em> (<em>кљѐште</em>) су доживеле промену у вези са старим јатом.<br/>
+        &nbsp; &nbsp; &nbsp; Групе <em>мн > мл</em> (<em>мло̀го, млозѝна</em>) и <em>гњ > гл</em> (<em>глѐтав</em>) су настале 
+        дисимилацијом, а даљинском дисимилацијом и група <em>сн > сл</em> (<em>слѝмам, слѝмък</em>). Дисимилацијом добијамо и 
+        групе <em>тљ > кљ</em> (<em>пѐкља, запѐкљам</em>) и <em>цл > цк</em> (<em>цỳцка</em>).<br/>
+        &nbsp; &nbsp; &nbsp; У суседству плозива гласови <em>с</em>, <em>ш</em> и <em>ж</em> се у процесу асимилације африкатизују, па тако 
+        имамо групе <em>пш > пч</em> (<em>пченѝца, пченѝчка, пченѝчън</em>), <em>пс > пц</em> (<em>пцѐто, пцо̀вка, лѝпцам, пцỳем</em>) и 
+        <em>жб > џб</em> (<em>вѐџба, вѐџбам, џбун</em>), као и <em>шк > чк</em> (<em>чкѐмбе, чко̀ла</em>).<br/>
+        &nbsp; &nbsp; &nbsp; Асимилацијом имамо и групе <em>мљ > мњ</em> (<em>зѐмња, гръмња̀ва</em>) и <em>мт > нт</em> (<em>пантѐње, па̀нтим</em>), 
+        а регресивном асимилацијом је добијена група <em>вн > мн</em> (<em>ра̀мно, одъ̀мна, го̀мно, ѕъ̀мнење</em>).<br/>
+        &nbsp; &nbsp; &nbsp; Код групе <em>зј > јз</em> је примећена метатеза: <em>гро̀јзе, ло̀јзе, гво̀јзе</em>.
+    </p>
+    <hr>
+
+    <h1 class="display-6 fw-bold" id="morfologija">Морфологија</h1>
+    <p class="col-md-11 fs-5">
+        
+    </p>
+    <hr>
+
+</div>
