quiz grammar rod imenica

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -123,6 +123,11 @@
                 routerLink="/quiz/grammar/glagol-jesam">6</button>
                 <span> - глагол јесам</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
+            <div class="col-md-2 column">
+                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg"
+                routerLink="/quiz/grammar/rod-imenica">7</button>
+                <span> - род именица</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
         </div>
         <br/><br/>
         <div class="row">
