quiz vocab false friends

--- a/src/app/mind-your-language/mind-your-language.component.html
+++ b/src/app/mind-your-language/mind-your-language.component.html
@@ -127,7 +127,7 @@
         говорима је <em>ф</em> добро сачувано под утицајем албанског и турског језика. Чак у тој мери је тај глас тамо 
         добро сачуван да у неким случајевима мења <em>в</em> са <em>ф</em>. Из тог разлога, као и за неке речи страног 
         порекла је консонант <em>ф</em> остављен као део азбуке. Сви остали ПТДГ говори теже замени <em>ф</em> у <em>в</em>: 
-        <em>вабрѝка, вакултѐт, Вѝлип, вилџа̀н, вурỳна</em>. Примери замене <em>в</em> у <em>ф</em> 
+        <em>вабрѝка, вакултѐт, Вѝлип, вилџа̀н, вурỳна, ко̀ва</em>. Примери замене <em>в</em> у <em>ф</em> 
         (најприсутнија је тамо где је постојала сугласничка група <em>хв</em>): <em>ка̀фа, фръ̀љам, фа̀тим, фа̀ла</em>.
         <br/>
         &nbsp; &nbsp; &nbsp; Сугласник <em>в</em> је доста слабе артикулације те у неким ПТДГ говорима долази до 
@@ -143,12 +143,15 @@
         сврљишко-заплањском дијалекту (<em>узѐл, писа̀л, видѐл, бел, цел, пѐпел, светѝлник</em>). У призренско-јужноморавскоме 
         је такође тавко <em>л</em> сачувано у именицама, придевима и прилозима, али у радном глаголском придеву мушког рода једнине 
         прелази у <em>-а</em> (<em>писа̀ја, узѐја, видѐја, уватѝја</em>). У неким косовским ПТДГ говорима прелазак <em>л</em> у 
-        <em>а</em> је отишао корак даље па тамо тако имамо <em>бѐја</em> уместо <em>бел</em>.<br/>
+        <em>а</em> је отишао корак даље па тамо тако имамо <em>бѐја</em> уместо <em>бел</em>. У косовским ПТДГ говорима л се 
+        испред вокала и и е изговара мекше, али тврђе од љ, као албанско l.<br/>
         &nbsp; &nbsp; &nbsp; Сугласник <em>ќ</em> у изговору варира од македонског ќ, преко палатала средњег реда ќ<sup>к</sup>, 
         преко палатала предњег реда ќ<sup>т</sup>, па до класично српског ћ. Аналогно за <em>ѓ</em>. По постанку, ќ и ѓ су у 
         тимочко-лужничком искључиво од јотованих к и г (<em>ма̀јќа, раќѝја, но̀ѓе, рỳќе</em>), а у призренско-јужноморавскоме 
         су и од прасловенских *tj и *dj (<em>ноќ, свѐќа, мѐѓа</em>), док су у тимочко-лужничком рефлекси ових прасловенских 
-        гласова <em>ч</em> и <em>џ</em> (<em>ноч, свеча̀, меџа̀</em>).
+        гласова <em>ч</em> и <em>џ</em> (<em>ноч, свеча̀, меџа̀</em>). Сугласници <em>ч</em> и <em>џ</em> су углавном нормалне, 
+        тврде артикулације, али се у неким крајевима изговарају мекше попут турских <em>ç</em> и <em>c</em>, а у неким градским 
+        срединама се развила и фонема <em>цч</em>, однсосно <em>ѕџ</em>.
     </p>
 
     <h2 class="display-8 fw-bold" id="fonetika-jotovanje">Јотовање</h2>
