--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -90,6 +90,11 @@
                     routerLink="/quiz/vocabulary/dani-u-nedelji">8</button>
                 <span> - дани у недељи</span>&nbsp;&nbsp;&nbsp;&nbsp;
             </div>
+            <div class="col-md-2 column">
+                <button [disabled]="loggedIn === false" class="btn btn-success btn-lg"
+                    routerLink="/quiz/vocabulary/lazni-prijatelji">9</button>
+                <span> - лажни пријатељи</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            </div>
         </div>
         <br /><br />
         <div class="row">
