quiz vocab human body

--- a/src/app/mind-your-language/mind-your-language.component.html
+++ b/src/app/mind-your-language/mind-your-language.component.html
@@ -127,7 +127,7 @@
         говорима је <em>ф</em> добро сачувано под утицајем албанског и турског језика. Чак у тој мери је тај глас тамо 
         добро сачуван да у неким случајевима мења <em>в</em> са <em>ф</em>. Из тог разлога, као и за неке речи страног 
         порекла је консонант <em>ф</em> остављен као део азбуке. Сви остали ПТДГ говори теже замени <em>ф</em> у <em>в</em>: 
-        <em>вабрѝка, вакултѐт, Вѝлип, вилџа̀н, вурỳна, ко̀ва</em>. Примери замене <em>в</em> у <em>ф</em> 
+        <em>вабрѝка, вакултѐт, Вѝлип, вилџа̀н, вурỳна, ко̀ва, вамѝлија</em>. Примери замене <em>в</em> у <em>ф</em> 
         (најприсутнија је тамо где је постојала сугласничка група <em>хв</em>): <em>ка̀фа, фръ̀љам, фа̀тим, фа̀ла</em>.
         <br/>
         &nbsp; &nbsp; &nbsp; Сугласник <em>в</em> је доста слабе артикулације те у неким ПТДГ говорима долази до 
